--- a/CuponWebSite/CuponWebSite/CuponWebSite.csproj
+++ b/CuponWebSite/CuponWebSite/CuponWebSite.csproj
@@ -82,9 +82,13 @@
     <Content Include="view\css\bootstrap.css" />
     <Content Include="view\css\bootstrap.min.css" />
     <Content Include="view\css\main.css" />
+    <Content Include="view\css\metisMenu.min.css" />
+    <Content Include="view\css\sb-admin-2.css" />
     <Content Include="view\css\shop-homepage.css" />
     <Content Include="view\css\slider.css" />
     <Content Include="view\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="view\images\Business.jpg" />
+    <Content Include="view\images\Coupon.png" />
     <Content Include="view\images\Female_User.jpg" />
     <Content Include="view\images\Male_User.jpg" />
     <Content Include="view\index.html" />
@@ -96,6 +100,8 @@
     <Content Include="view\js\cupon.js" />
     <Content Include="view\js\jquery.js" />
     <Content Include="view\js\main.js" />
+    <Content Include="view\js\metisMenu.min.js" />
+    <Content Include="view\js\sb-admin-2.js" />
     <Content Include="view\SysAdmin.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
