--- a/CuponWebSite/CuponWebSite/bin/CuponWebSite.dll.config
+++ b/CuponWebSite/CuponWebSite/bin/CuponWebSite.dll.config
@@ -26,4 +26,12 @@
   <connectionStrings>
     <add name="ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|Database.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <system.webServer>
+    <handlers>
+      <add name="ScriptHandlerFactory"
+           verb="*" path="*.asmx"
+           type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+           resourceType="Unspecified" />
+    </handlers>
+  </system.webServer>
 </configuration>
