--- a/CuponWebSite/UnitTestWebCuponSystemService/app.config
+++ b/CuponWebSite/UnitTestWebCuponSystemService/app.config
@@ -1,16 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="CuponSystemWebServiceSoap" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:20353/CuponSystemWebService.asmx"
-                binding="basicHttpBinding" bindingConfiguration="CuponSystemWebServiceSoap"
-                contract="CuponSystemWebServiceReference.CuponSystemWebServiceSoap"
-                name="CuponSystemWebServiceSoap" />
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
