--- a/CuponWebSite/CuponWebSite/bin/CuponWebSite.dll.config
+++ b/CuponWebSite/CuponWebSite/bin/CuponWebSite.dll.config
@@ -28,10 +28,7 @@
   </connectionStrings>
   <system.webServer>
     <handlers>
-      <add name="ScriptHandlerFactory"
-           verb="*" path="*.asmx"
-           type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-           resourceType="Unspecified" />
+      <add name="ScriptHandlerFactory" verb="*" path="*.asmx" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" resourceType="Unspecified" />
     </handlers>
   </system.webServer>
 </configuration>
