--- a/CuponWebSite/CuponWebSite/Web.config
+++ b/CuponWebSite/CuponWebSite/Web.config
@@ -35,4 +35,11 @@
     <add key="microsoft.visualstudio.teamsystems.backupinfo" value="1;web.config.backup" />
     <add key="microsoft.visualstudio.teamsystems.aspnetdevserver:/" value="64765;True;13808;1;-8587688625079305614" />
   </appSettings>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="500000000" />
+      </webServices>
+    </scripting>
+  </system.web.extensions>
 </configuration>
